[tool.poetry]
name = "training-ogcapi-features"
version = "0.1.0"
description = "Experiment the consumption of an OGC API compliant server"
authors = ["Etienne Schalk <eschalk@argans.eu>"]
readme = "README.md"
packages = [{include = "training_ogcapi_features"}]

[tool.poetry.dependencies]
python = "^3.10"
OWSLib = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
